--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,17 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.8.5</version>
 		</dependency> 
+	
+	<!-- websocket 라이브러리 -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-websocket</artifactId>
+		    <!-- 실행하는 spring의 버전과 맞춰줌 -->
+		    <version>${org.springframework-version}</version>
+		</dependency>
 	</dependencies>
+			
+	
 	
     <build>
         <plugins>
