--- a/pom.xml
+++ b/pom.xml
@@ -221,12 +221,22 @@
 		    <version>2.8.5</version>
 		</dependency> 
 	
-	<!-- websocket 라이브러리 -->
+		<!-- websocket 라이브러리 -->
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-websocket</artifactId>
 		    <!-- 실행하는 spring의 버전과 맞춰줌 -->
 		    <version>${org.springframework-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
 		</dependency>
 	</dependencies>
 			
