--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,13 @@
 		    <version>1.6.2</version>
 		</dependency>
 
+
+		
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 			
     <build>
